<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white">

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="150dp"
        android:layout_height="1300.03dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/login_back"
        android:rotation="46" />


    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:maxWidth="175dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/poppins_bold"
        android:gravity="start|top"
        android:paddingStart="7dp"
        android:paddingTop="98dp"
        android:paddingRight="5dp"
        android:text="@string/login_title"
        android:contentDescription="@string/login_title_description"
        android:textAppearance="@style/login_challenge_title"
        android:textStyle="bold" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/login_image"
        android:layout_width="wrap_content"
        android:layout_height="171dp"
        android:layout_gravity="end"
        android:background="@drawable/ellipse_1"
        android:layoutDirection="inherit" />
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="12dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:text="@string/login_email"
        android:textAppearance="@style/email"
        android:contentDescription="@string/email_description"
        android:gravity="top"
        android:textSize="25sp"
        />
    <EditText
        android:id="@+id/loginEmail"
        android:hint="@string/login_email_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="310dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingTop="10dp"
        android:textColor="@color/Black" />
    <View
        android:id="@+id/login_email_background"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="12dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="348dp"
        android:background="@drawable/line"
        />

    <TextView
        android:id="@+id/pass_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textSize="25sp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="368dp"
        android:text="@string/login_password"
        android:textAppearance="@style/password"
        android:contentDescription="@string/password_description"
        android:gravity="top"
        />

    <EditText
        android:id="@+id/loginPass"
        android:hint="@string/login_pass_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="395dp"
        android:minHeight="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingTop="10dp"
        android:textColor="@color/Black" />

    <View
        android:id="@+id/login_pass_background"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
       android:layout_marginEnd="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="433dp"
        android:background="@drawable/line"
        />
    <TextView
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:minHeight="48dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        android:layout_marginTop="450dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_forgot_pass"
        android:contentDescription="@string/reset_password_description"
        android:textAppearance="@style/new_user_si"
        android:gravity="top"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="510dp"
        android:text="@string/login_btn"
        android:contentDescription="@string/login_btn_description"
        android:background="@drawable/rectangle_2"
        android:textAppearance="@style/login"
        />


    <TextView
        android:id="@+id/registerPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="580dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_create_account"
        android:textAppearance="@style/new_user_si"
        android:textSize="20sp"
        android:contentDescription="@string/signup_description"
        android:gravity="top"
        />



    <View
        android:id="@+id/line_3"
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="625dp"
        android:background="@drawable/short_line"
        />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="620dp"
        android:text="OR"
        android:textAppearance="@style/or"
        android:gravity="top"
        />
    <View
        android:id="@+id/line_4"
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="25dp"
        android:layout_gravity="end"
        android:layout_marginTop="625dp"
        android:background="@drawable/short_line" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:contentDescription="@string/login_google_description"
        android:layout_marginBottom="30dp"
        >

    </com.google.android.gms.common.SignInButton>


</androidx.cardview.widget.CardView>
