...
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".View.MapsActivity" >
                <LinearLayout
...
